Implementation of ProportionalScalable on loads and on generators
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>